git+zsh: Add `git` aliases

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -26,6 +26,9 @@
     # Be explicit: use `drop` instead.
 	missingCommitsCheck = error
 
+[alias]
+    stash-all = stash --include-untracked
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
