--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -3,3 +3,13 @@ disabled = false
 
 [shell]
 disabled = false
+
+[python]
+detect_files = [
+    "Pipfile",
+    "__init__.py",
+    "pyproject.toml",
+    "requirements.txt",
+    "setup.py",
+    "tox.ini"
+]
