misc: Add git config file associations for VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "aliases": "shellscript",
         "profile": "shellscript",
         "rc": "shellscript",
+        "**/.config/git/*": "properties",
     }
 }
