--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -7,6 +7,10 @@
 	eol = lf
 	autocrlf = input
 
+[init]
+    # Use `main` as the default initial branch name.
+    defaultBranch = main
+
 [merge]
     # Automatically stash, merge and unstash.
 	autoStash = true
