ci: Don't run ShellCheck on `.stowrc`
I should really look into fixing the GitHub Action instead rather than
adding exclusions everytime something ends in 'rc'.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,4 +12,4 @@ jobs:
       uses: ludeeus/action-shellcheck@203a3fd018dfe73f8ae7e3aa8da2c149a5f41c33
       with:
         additional_files: 'aliases profile rc'
-        ignore_names: '.shellcheckrc'
+        ignore_names: '.shellcheckrc .stowrc'
