--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -23,6 +23,8 @@ indent_size = 2
 indent_style = space
 
 [*.md]
+indent_size = 2
+indent_style = space
 # Trailing whitespace is meaningful.
 # https://spec.commonmark.org/0.30/#hard-line-breaks
 trim_trailing_whitespace = false
