starship: (Mostly) remove the Nerd Font dependency
This patch applies my configurations on top of the `no-nerd-font`
preset.

Only the battery module remains using Nerd Font symbols as I didn't
really like the alternatives.

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -11,5 +11,21 @@ detect_files = [
     "pyproject.toml",
     "requirements.txt",
     "setup.py",
-    "tox.ini"
+    "tox.ini",
 ]
+
+# [battery]
+# full_symbol = "• "
+# charging_symbol = "⇡ "
+# discharging_symbol = "⇣ "
+# unknown_symbol = "❓ "
+# empty_symbol = "❗ "
+
+[erlang]
+symbol = "ⓔ "
+
+[nodejs]
+symbol = "[⬢](bold green) "
+
+[pulumi]
+symbol = "🧊 "
