zsh: Use Git submodules for plugins
Before this patch, I was using system packages for the zsh plugins
`zsh-autosuggestions` and `zsh-syntax-highlighting`. Now, they're Git
submodules. This makes the shell behaves more or less the same
regardless of which version is available (if any) in the system's
package manager. The downside is that they have to be updated manually.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "pandoc/.local/share/pandoc"]
 	path = pandoc/.local/share/pandoc
 	url = https://github.com/gabrielsoldani/.pandoc.git
+[submodule "zsh/.config/zsh/plugins/zsh-autosuggestions"]
+	path = zsh/.config/zsh/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "zsh/.config/zsh/plugins/zsh-syntax-highlighting"]
+	path = zsh/.config/zsh/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
