git: Add `git root` and `cd-root` aliases
These are useful for quickly referencing or jumping to the root of the
working tree.

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -35,7 +35,8 @@
 	missingCommitsCheck = error
 
 [alias]
-    stash-all = stash --include-untracked
+    root = "rev-parse --show-toplevel"
+    stash-all = "stash --include-untracked"
 
 [filter "lfs"]
 	clean = git-lfs clean -- %f
