ssh: Add ssh config support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "aliases": "shellscript",
     "profile": "shellscript",
     "rc": "shellscript",
-    "**/.config/git/*": "properties"
+    "**/.config/git/*": "properties",
+    "**/.ssh/config.d/*": "ssh_config"
   }
 }
