--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: jirutka/setup-alpine@v1
+      with:
+        packages: sudo
     - name: Bootstrap
       run: ./bootstrap.sh
       shell: alpine.sh {0}
