--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,30 +9,8 @@ on:
       - main
 
 jobs:
-  test-brew-macos:
-    name: Test with Homebrew for macOS
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Homebrew
-      id: set-up-homebrew
-      uses: Homebrew/actions/setup-homebrew@master
-    - name: Bootstrap
-      run: ./bootstrap.sh
-
-  test-brew-linux:
-    name: Test with Homebrew for Linux
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Homebrew
-      id: set-up-homebrew
-      uses: Homebrew/actions/setup-homebrew@master
-    - name: Bootstrap
-      run: ./bootstrap.sh
-
   test-alpine:
-    name: Test with Alpine Package Keeper
+    name: Test on Alpine
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
