--- a/winget-packages.jsonc
+++ b/winget-packages.jsonc
@@ -5,18 +5,19 @@
       "Packages": [
         { "PackageIdentifier": "7zip.7zip" },
         { "PackageIdentifier": "clsid2.mpc-hc" },
-        { "PackageIdentifier": "CodeSector.TeraCopy" },
+        // { "PackageIdentifier": "CodeSector.TeraCopy" },
         { "PackageIdentifier": "Discord.Discord" },
-        { "PackageIdentifier": "Docker.DockerDesktop" },
-        { "PackageIdentifier": "Git.Git" },
+        // { "PackageIdentifier": "Docker.DockerDesktop" },
+        // { "PackageIdentifier": "Git.Git" },
         { "PackageIdentifier": "Google.Chrome" },
-        { "PackageIdentifier": "Microsoft.Edge" },
-        { "PackageIdentifier": "Microsoft.EdgeWebView2Runtime" },
-        { "PackageIdentifier": "Microsoft.OneDrive" },
+        // { "PackageIdentifier": "Microsoft.Edge" },
+        // { "PackageIdentifier": "Microsoft.EdgeWebView2Runtime" },
+        // { "PackageIdentifier": "Microsoft.OneDrive" },
         { "PackageIdentifier": "Microsoft.PowerToys" },
-        { "PackageIdentifier": "Microsoft.VisualStudioCode" },
+        // { "PackageIdentifier": "Microsoft.VisualStudioCode" },
         { "PackageIdentifier": "Mozilla.Firefox" },
         { "PackageIdentifier": "OBSProject.OBSStudio" },
+        { "PackageIdentifier": "SourceFoundry.HackFonts" },
         { "PackageIdentifier": "Valve.Steam" },
         { "PackageIdentifier": "voidtools.Everything.Lite" },
         { "PackageIdentifier": "WinDirStat.WinDirStat" }
@@ -31,7 +32,7 @@
     {
       "Packages": [
         // Windows Subsystem for Linux
-        { "PackageIdentifier": "9P9TQF7MRM4R" },
+        // { "PackageIdentifier": "9P9TQF7MRM4R" },
         // Windows Terminal
         { "PackageIdentifier": "9N0DX20HK701" },
         // HEIF Image Extensions
@@ -47,11 +48,13 @@
         // AV1 Video Extension
         { "PackageIdentifier": "9MVZQVXJBQ9V" },
         // EarTrumpet
-        { "PackageIdentifier": "9NBLGGH516XP" },
+        // { "PackageIdentifier": "9NBLGGH516XP" },
         // Sysinternals Suite
-        { "PackageIdentifier": "9P7KNL5RWT25" },
+        // { "PackageIdentifier": "9P7KNL5RWT25" },
         // Bitwarden
-        { "PackageIdentifier": "9PJSDV0VPK04" },
+        // { "PackageIdentifier": "9PJSDV0VPK04" },
+        // 1Password
+        { "PackageIdentifier": "XP99C9G0KRDZ27" },
         // Spotify
         { "PackageIdentifier": "9NCBCSZSJRSB" },
         // Netflix
@@ -75,5 +78,5 @@
       }
     }
   ],
-  "WinGetVersion": "1.3.2691"
+  "WinGetVersion": "1.6.2631"
 }
