--- a/winget-packages.jsonc
+++ b/winget-packages.jsonc
@@ -3,20 +3,21 @@
   "Sources": [
     {
       "Packages": [
-        { "PackageIdentifier": "7zip.7zip" },
-        { "PackageIdentifier": "clsid2.mpc-hc" },
-        { "PackageIdentifier": "CodeSector.TeraCopy" },
+        // { "PackageIdentifier": "7zip.7zip" },
+        // { "PackageIdentifier": "clsid2.mpc-hc" },
+        // { "PackageIdentifier": "CodeSector.TeraCopy" },
         { "PackageIdentifier": "Discord.Discord" },
-        { "PackageIdentifier": "Docker.DockerDesktop" },
-        { "PackageIdentifier": "Git.Git" },
+        // { "PackageIdentifier": "Docker.DockerDesktop" },
+        // { "PackageIdentifier": "Git.Git" },
         { "PackageIdentifier": "Google.Chrome" },
-        { "PackageIdentifier": "Microsoft.Edge" },
-        { "PackageIdentifier": "Microsoft.EdgeWebView2Runtime" },
-        { "PackageIdentifier": "Microsoft.OneDrive" },
-        { "PackageIdentifier": "Microsoft.PowerToys" },
-        { "PackageIdentifier": "Microsoft.VisualStudioCode" },
-        { "PackageIdentifier": "Mozilla.Firefox" },
-        { "PackageIdentifier": "OBSProject.OBSStudio" },
+        // { "PackageIdentifier": "Microsoft.Edge" },
+        // { "PackageIdentifier": "Microsoft.EdgeWebView2Runtime" },
+        // { "PackageIdentifier": "Microsoft.OneDrive" },
+        // { "PackageIdentifier": "Microsoft.PowerToys" },
+        // { "PackageIdentifier": "Microsoft.VisualStudioCode" },
+        // { "PackageIdentifier": "Mozilla.Firefox" },
+        // { "PackageIdentifier": "OBSProject.OBSStudio" },
+        { "PackageIdentifier": "SourceFoundry.HackFonts" },
         { "PackageIdentifier": "Valve.Steam" },
         { "PackageIdentifier": "voidtools.Everything.Lite" },
         { "PackageIdentifier": "WinDirStat.WinDirStat" }
@@ -31,7 +32,7 @@
     {
       "Packages": [
         // Windows Subsystem for Linux
-        { "PackageIdentifier": "9P9TQF7MRM4R" },
+        // { "PackageIdentifier": "9P9TQF7MRM4R" },
         // Windows Terminal
         { "PackageIdentifier": "9N0DX20HK701" },
         // HEIF Image Extensions
@@ -47,25 +48,27 @@
         // AV1 Video Extension
         { "PackageIdentifier": "9MVZQVXJBQ9V" },
         // EarTrumpet
-        { "PackageIdentifier": "9NBLGGH516XP" },
+        // { "PackageIdentifier": "9NBLGGH516XP" },
         // Sysinternals Suite
-        { "PackageIdentifier": "9P7KNL5RWT25" },
+        // { "PackageIdentifier": "9P7KNL5RWT25" },
         // Bitwarden
-        { "PackageIdentifier": "9PJSDV0VPK04" },
+        // { "PackageIdentifier": "9PJSDV0VPK04" },
+        // 1Password
+        { "PackageIdentifier": "XP99C9G0KRDZ27" },
         // Spotify
         { "PackageIdentifier": "9NCBCSZSJRSB" },
         // Netflix
-        { "PackageIdentifier": "9WZDNCRFJ3TJ" },
+        // { "PackageIdentifier": "9WZDNCRFJ3TJ" },
         // Disney+
-        { "PackageIdentifier": "9NXQXXLFST89" },
+        // { "PackageIdentifier": "9NXQXXLFST89" },
         // WhatsApp
-        { "PackageIdentifier": "9NKSQGP7F2NH" },
+        // { "PackageIdentifier": "9NKSQGP7F2NH" },
         // Telegram Desktop
-        { "PackageIdentifier": "9NZTWSQNTD0S" },
+        // { "PackageIdentifier": "9NZTWSQNTD0S" },
         // Adobe Creative Cloud
-        { "PackageIdentifier": "XPDLPKWG9SW2WD" },
+        // { "PackageIdentifier": "XPDLPKWG9SW2WD" },
         // iCloud
-        { "PackageIdentifier": "9PKTQ5699M62" }
+        // { "PackageIdentifier": "9PKTQ5699M62" }
       ],
       "SourceDetails": {
         "Argument": "https://storeedgefd.dsx.mp.microsoft.com/v9.0",
@@ -75,5 +78,5 @@
       }
     }
   ],
-  "WinGetVersion": "1.3.2691"
+  "WinGetVersion": "1.6.2631"
 }
